# graphics-efl

./: .gitignore  LICENSE  README.md  graphics-efl.cabal  stack.yaml
examples/: ImageViewer.hs  Reactive.hs  Simple.hs  Simple2.hs  TextEditor.hs
src/Graphics/Efl/: Animator.hs  Canvas.chs  Canvas.hs  Core.chs  CoreCanvas.chs  Ecore.chs  EcoreEvas.chs  Eina.chs  Evas.chs  Helpers.hs  Simple.hs  Window.chs
src/Graphics/Efl/Canvas/: BasicObject.chs  Engine.hs  Events.chs  Image.chs  KeyEvents.hsc  Line.chs  Map.chs  Misc.chs  MiscEvents.hsc  MouseEvents.hsc  MultiEvents.hsc  Pointer.chs  Polygon.chs  Rectangle.chs  Text.chs  TextBlock.chs  Transformations.chs  Types.chs  ViewPort.chs
src/Graphics/Efl/Core/: Animator.chs  Idle.chs  Job.chs  Types.chs
src/Graphics/Efl/Evas/: BasicObject.chs  Events.chs  Image.chs  Rectangle.chs  Types.chs
src/Graphics/Efl/Widgets/: BasicObject.hs  Button.hs  Event.hs  Layout.hs  Reactive.hs  Rectangle.hs  Text.hs  Widget.hs  Window.hs
src/Graphics/Efl/Window/: Types.chs
tests/: test-evas.hs
