name:                graphics-efl
version:             0.1.0.0
synopsis:            Bindings to EFL (Enlightenment Foundation Libraries)
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Sylvain HENRY
maintainer:          hsyl20@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

-- License: http://commons.wikimedia.org/wiki/File:Red_Giant_Earth_warm.jpg
data-files:
   examples/data/Red_Giant_Earth_warm.jpg 


library
  exposed-modules:
      Graphics.Efl.Core,
      Graphics.Efl.Core.Animator,
      Graphics.Efl.Core.Job,
      Graphics.Efl.Core.Types,
      Graphics.Efl.Simple,
      Graphics.Efl.Helpers,
      Graphics.Efl.Window,
      Graphics.Efl.Window.Types,
      Graphics.Efl.Canvas,
      Graphics.Efl.Canvas.Types,
      Graphics.Efl.Canvas.BasicObject,
      Graphics.Efl.Canvas.Image,
      Graphics.Efl.Canvas.Rectangle,
      Graphics.Efl.Canvas.Polygon,
      Graphics.Efl.Canvas.Line,
      Graphics.Efl.Canvas.Text,
      Graphics.Efl.Canvas.TextBlock,
      Graphics.Efl.Canvas.Events,
      Graphics.Efl.Canvas.MouseEvents,
      Graphics.Efl.Canvas.MultiEvents,
      Graphics.Efl.Canvas.KeyEvents,
      Graphics.Efl.Canvas.MiscEvents,
      Graphics.Efl.Canvas.Map,
      Graphics.Efl.Canvas.Engine,
      Graphics.Efl.Canvas.ViewPort,
      Graphics.Efl.Canvas.Pointer,
      Graphics.Efl.Canvas.Misc,
      Graphics.Efl.Eina,

      Graphics.Efl.Widgets.Event,
      Graphics.Efl.Widgets.Reactive,
      Graphics.Efl.Widgets.Window,
      Graphics.Efl.Widgets.Widget,
      Graphics.Efl.Widgets.Layout,
      Graphics.Efl.Widgets.BasicObject,
      Graphics.Efl.Widgets.Rectangle,
      Graphics.Efl.Widgets.Text,
      Graphics.Efl.Widgets.Button


  PkgConfig-Depends:
    eina,
    evas,
    ecore,
    ecore-evas

  extra-libraries:
    eina
    ecore
    ecore_evas
    evas

  build-depends:
      base ==4.7.*,
      vector ==0.10.*,
      transformers ==0.4.*,
      system-time-monotonic ==0.2,
      containers ==0.5.*

  hs-source-dirs:      src
  build-tools:         c2hs, hsc2hs
  ghc-options: -Wall -threaded

Test-Suite test-evas
  type:           exitcode-stdio-1.0
  main-is:        test-evas.hs
  hs-source-dirs: tests
  build-depends:  base, graphics-efl

executable TextEditor
  main-is: TextEditor.hs
  other-modules: 
  build-depends: 
    base,
    graphics-efl
  hs-source-dirs: examples
  ghc-options: -Wall -threaded

executable Simple
  main-is: Simple.hs
  other-modules: 
      Paths_graphics_efl

  build-depends: 
    base,
    graphics-efl

  hs-source-dirs: examples
  ghc-options: -Wall -threaded

executable Simple2
  main-is: Simple2.hs
  other-modules: 

  build-depends: 
    base,
    graphics-efl,
    transformers

  hs-source-dirs: examples
  ghc-options: -Wall -threaded

executable ImageViewer
  main-is: ImageViewer.hs
  build-depends: 
    base,
    graphics-efl,
    vector,
    stm
  hs-source-dirs: examples
  ghc-options: -Wall -threaded
